# easy-query-visualize

./: Explore.ipynb  Makefile  README.md  pyproject.toml
src/duckdb/: query_parquet.py
src/duckdb_utils/: query_parquet.py
